src/test/custom/valid/for/forEmpty.wacc
# a for-loop with three empty expr in its statement

# Output:
# 0, 1, 2, 3, 4, 5

# Program:

begin
  int i = 0;
  for (skip; true; skip) do
    print i;
    i = i + 1;
    if i > 5
    then
      break
    else
      print ", "
    fi
  done;
  println ""
end
