src/test/custom/invalid/jump/breakOutsideLoop2.wacc
# break outside the for-loop

# Output:
# #syntax error#

# Program:

begin
  for (int j = 0; j < 0; j = j + 1) do
    println j
  done;

  int i = 0;
  if i == 1 then
    break
  else
    skip
  fi
end